# mcp-repl

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.codex/: config.toml
.codex/rules/: git.rules
.github/workflows/: ci.yml
docs/: architecture.md  debugging.md  index.md  sandbox-config.md  sandbox.md  testing.md  worker_sideband_protocol.md
docs/deferred-work/: external-mcp-console-config.md
docs/futurework/: external-mcp-console-config.md  per-turn-history-bundles.md  repl-interaction-rough-edges.md  repl-tool-description-extras.md  stdin-transport-single-owner.md
docs/notes/: eval_suite_ideas.md
docs/plans/: AGENTS.md
docs/tool-descriptions/: repl_reset_tool.md  repl_tool.md  repl_tool_python.md  repl_tool_python_pager.md  repl_tool_r.md  repl_tool_r_pager.md  write_stdin_tool.md
python/: driver.py
r/: mcp_console.R  mcp_repl.R
scripts/: install.ps1  install.sh  mcp-repl-trace-proxy.py
src/: backend.rs  claude.rs  debug_logs.rs  debug_repl.rs  diagnostics.rs  event_log.rs  html_to_markdown.rs  input_protocol.rs  install.rs  ipc.rs  linux_proxy_routing.rs  main.rs  managed_network_proxy.rs  output_capture.rs  output_stream.rs  pending_output_tape.rs  r_controls.rs  r_graphics.rs  r_htmd.rs  r_session.rs  sandbox.rs  sandbox_cli.rs  server.rs  shell_escape.rs  windows_sandbox.rs  worker.rs  worker_process.rs  worker_protocol.rs
src/pager/: command.rs  merge.rs  mod.rs  presentation.rs  ranges.rs  search.rs
src/sandbox/: seatbelt_base_policy.sbpl  seatbelt_network_policy.sbpl
src/server/: overflow.rs  response.rs  tests.rs  timeouts.rs
tests/: README.md  claude_clear_binding.rs  claude_integration.rs  codex_approvals_tui.rs  debug_events_env.rs  debug_events_tool_calls.rs  debug_repl_prompt.rs  docs_contracts.rs  install_dual_backend.rs  interrupt.rs  manage_session_behavior.rs  mcp_transcripts.rs  pager.rs  pager_flags.rs  pager_hits_seek.rs  pager_page_size.rs  pager_seek.rs  pager_skip.rs  pager_where.rs  plot_images.rs  python_backend.rs  python_plot_images.rs  python_program_selection.rs  r_console_encoding.rs  r_file_show.rs  r_help.rs  r_manuals.rs  r_startup.rs  r_vignettes.rs  refactor_coverage.rs  repl_surface.rs  reply_overflow_files.rs  reticulate_py_help.rs  sandbox.rs  sandbox_state_updates.rs  server_smoke.rs  session_endings.rs  windows_suite_server_lock.rs  worker_ipc_disconnect.rs  write_stdin_batch.rs  (+2 more)
tests/common/: mod.rs
tests/snapshots/: codex_approvals_tui__linux__codex_exec_initial_sandbox_state.snap  codex_approvals_tui__linux__codex_exec_initial_sandbox_state_plain.snap  codex_approvals_tui__linux__codex_tui_initial_sandbox_state.snap  codex_approvals_tui__macos__codex_exec_initial_sandbox_state.snap  codex_approvals_tui__macos__codex_exec_initial_sandbox_state_plain.snap  codex_approvals_tui__macos__codex_tui_initial_sandbox_state.snap  mcp_transcripts__snapshots_interrupt_handler_output.snap  mcp_transcripts__snapshots_interrupt_handler_output@transcript.snap  mcp_transcripts__snapshots_support_multiple_calls_and_sessions.snap  mcp_transcripts__snapshots_support_multiple_calls_and_sessions@transcript.snap  mcp_transcripts__snapshots_tempdir_session_restart.snap  mcp_transcripts__snapshots_tempdir_session_restart@transcript.snap  pager__pager_dedup_on_seek.snap  pager__pager_dedup_on_seek@transcript.snap  pager__pager_hits_mode.snap  pager__pager_hits_mode@transcript.snap  pager__pager_matches_with_headings.snap  pager__pager_matches_with_headings@transcript.snap  pager__pager_search_and_counts.snap  pager__pager_search_and_counts@transcript.snap  pager__pager_search_case_insensitive_prefix_parsing.snap  pager__pager_search_case_insensitive_prefix_parsing@transcript.snap  pager__pager_search_preserves_whitespace.snap  pager__pager_search_preserves_whitespace@transcript.snap  pager__pager_whitespace_only_input_advances_page.snap  pager__pager_whitespace_only_input_advances_page@transcript.snap  (+46 more)
(+10 files in other folders)
